# sound-manager-mac

./: .gitignore  .gitmodules  LICENSE  README.md  project.yml
Shared/: SMTypes.h
SoundManager/: SoundManager-Bridging-Header.h  SoundManagerApp.swift
SoundManager/Models/: ActiveApp.swift  ActiveClient.swift  AudioDevice.swift
SoundManager/Services/AppRegistry/: ProcessGrouping.swift  RunningAppsMonitor.swift
SoundManager/Services/CoreAudio/: AudioObjectClient.swift
SoundManager/Services/Playback/: LoopbackEngine.swift
SoundManager/Services/TCC/: PermissionChecker.swift
SoundManager/ViewModels/: MixerViewModel.swift
SoundManager/Views/: MenuBarView.swift  OnboardingView.swift
SoundManagerDriver/: CMakeLists.txt  Driver.cpp  Info.plist.in
SoundManagerTests/: MixerViewModelTests.swift  MockAudioObjectClient.swift  PermissionCheckerTests.swift  ProcessGroupingTests.swift
docs/: signal-flow.md
scripts/: install-driver.sh  uninstall-driver.sh
tools/audio-probe/: Package.swift  README.md
tools/audio-probe/Sources/audio-probe/: ActiveClientsReader.swift  AudioObjectClient.swift  main.swift
